@@ -190,14 +190,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
-                <!--<configuration>
+                <configuration>
                     <skip>true
                     </skip>
                     <argLine>
-                        &#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
                     </argLine>
                     <forkCount>0</forkCount>
-                </configuration>-->
+                </configuration>
             </plugin>
         </plugins>
     </build>
